@@ -6,12 +6,12 @@
 
 NAME=gpsd
 DAEMON=/usr/sbin/$NAME
-PID=`pidof -o %PPID /usr/sbin/gpsd`
+PID=$(pidof -o %PPID /usr/sbin/gpsd)
 
 case "$1" in
    start)
 	stat_busy "Starting gpsd"
-	[ -z "$PID" ] && $DAEMON ${GPSD_OPTS} ${GPS_DEV}
+	[ -z "$PID" ] && "$DAEMON" ${GPSD_OPTIONS} -F ${GPSD_SOCKET} ${DEVICES}
 	if [ $? -gt 0 ]; then
 		stat_fail
 	else
